--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18",
-    "react-router-dom": "^6.17.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
